Enable lint error notifications via gulp-notify

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-plumber": "latest",
     "gulp-clean": "latest",
     "gulp-jshint": "latest",
+    "gulp-notify": "latest",
     "stringify": "latest",
     "gulp-livereload": "latest",
     "jshint-stylish": "latest",
