Labels rendering and Custom you are here icon working

--- a/app/public/components/jibestream-sdk/jibestreamConfig.json
+++ b/app/public/components/jibestream-sdk/jibestreamConfig.json
@@ -56,9 +56,11 @@
 		"iconStyles":{
 			"youarehere":{
 				"url":"/components/jibestream-sdk/images/youarehere.png",
+				"width":"83px",
+				"height":"100px",
 				"offset":{
-					"x":"83px",
-					"y":"200px"
+					"x":"41px",
+					"y":"100px"
 				}
 			}
 
