Labels styled dynamically and positioned properly. SponsorshipRating logic is in. Waiting on server data to update.

--- a/app/public/components/jibestream-sdk/jibestreamConfig.json
+++ b/app/public/components/jibestream-sdk/jibestreamConfig.json
@@ -63,8 +63,11 @@
 					"y":"100px"
 				}
 			}
-
+		},
+		"labelStyle":{
+			"font-size":"20px",
+			"color":"#333",
+			"maxWidth":"150px"
 		}
 	}
-
 }
