--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "wayfinding_prototype",
   "version": "0.1.0",
   "authors": [
-    "Dan Sim <dsim@au.westfield.com>"
+    "Dan Sim <dsim@westfield.com>"
   ],
   "description": "Westfield Wayfinding Prototype",
   "private": true,
