Destination icon configurable

--- a/app/public/components/jibestream-sdk/jibestreamConfig.json
+++ b/app/public/components/jibestream-sdk/jibestreamConfig.json
@@ -66,6 +66,15 @@
 					"x":"41px",
 					"y":"100px"
 				}
+			},
+			"destination":{
+				"url":"/components/jibestream-sdk/images/pin.png",
+				"width":"100px",
+				"height":"131px",
+				"offset":{
+					"x":"50px",
+					"y":"131px"
+				}
 			}
 		},
 		"labelStyle":{
