Using CORS to get SVG files from Server

--- a/app/public/components/jibestream-sdk/jibestreamConfig.json
+++ b/app/public/components/jibestream-sdk/jibestreamConfig.json
@@ -54,7 +54,7 @@
 			"pathType":"line",
 			"spacing":5,
 			"pathWidth":5,
-			"pathColor":"#f00",
+			"pathColor":"#0f0",
 			"additionalCss":"/*border:1px solid #000;*/"
 		},
 		"iconStyles":{
