--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -14,6 +14,45 @@
     }
   },
   "bluetooth": {},
-  "permissions": ["webview", "storage", "alarms", "unlimitedStorage", "power", "fullscreen", "system.cpu"],
+  "permissions": [
+    "http://*/",
+    "https://*/",
+    "webview",
+    "cookies",
+    "debugger",
+    "declarativeContent",
+    "declarativeWebRequest",
+    "desktopCapture",
+    "dns",
+    "downloads",
+    "experimental",
+    "experimental",
+    "fileBrowserHandler",
+    "fileSystemProvider",
+    "gcm",
+    "identity",
+    "idle",
+    "idltest",
+    "location",
+    "management",
+    "nativeMessaging",
+    "notificationProvider",
+    "notifications",
+    "pageCapture",
+    "proxy",
+    "pushMessaging",
+    "storage",
+    "tts",
+    "ttsEngine",
+    "webRequest",
+    "vpnProvider",
+    "identity",
+    "storage",
+    "alarms",
+    "unlimitedStorage",
+    "power",
+    "fullscreen",
+    "system.cpu"
+    ],
   "kiosk_enabled": true
 }
