--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/server/index.js",
   "scripts": {
     "start": "node app/server/index.js",
-    "postinstall": "node node_modules/.bin/gulp build"
+    "postinstall": "gulp build"
   },
   "dependencies": {
     "express": "~3.4.x",
