--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-browserify": "latest",
     "gulp-json-editor": "latest",
     "gulp-sass": "latest",
+    "gulp-ruby-sass": "latest",
     "gulp-zip": "latest",
     "gulp-concat": "latest",
     "gulp-ngmin": "latest",
