--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Westfield Wayfinding Prototype",
   "update_url": "https://clients2.google.com/service/update2/crx",
-  "version": "0.0.11",
+  "version": "0.0.15",
   "manifest_version": 2,
   "icons": {
     "16": "icon-16.png",
@@ -9,7 +9,9 @@
   },
   "app": {
     "background": {
-      "scripts": ["background.js"],
+      "scripts": [
+        "background.js"
+      ],
       "persistant": true
     }
   },
@@ -18,41 +20,11 @@
     "http://*/",
     "https://*/",
     "webview",
-    "cookies",
-    "debugger",
-    "declarativeContent",
-    "declarativeWebRequest",
     "desktopCapture",
-    "dns",
-    "downloads",
-    "experimental",
-    "experimental",
-    "fileBrowserHandler",
-    "fileSystemProvider",
-    "gcm",
-    "identity",
-    "idle",
-    "idltest",
-    "location",
-    "management",
-    "nativeMessaging",
-    "notificationProvider",
-    "notifications",
-    "pageCapture",
-    "proxy",
-    "pushMessaging",
     "storage",
-    "tts",
-    "ttsEngine",
-    "webRequest",
-    "vpnProvider",
-    "identity",
-    "storage",
-    "alarms",
     "unlimitedStorage",
     "power",
-    "fullscreen",
-    "system.cpu"
-    ],
+    "fullscreen"
+  ],
   "kiosk_enabled": true
 }
