--- a/app/public/components/jibestream-sdk/jibestreamConfig.json
+++ b/app/public/components/jibestream-sdk/jibestreamConfig.json
@@ -33,7 +33,8 @@
         "addLabel": true,
         "sponsorship":75,
         "label":{
-          "font-size": "10px",
+         "font-size": "15px",
+          "font-weight": "bold",
           "color": "#000"
         }
    },
@@ -73,7 +74,7 @@
         "addLabel": true,
         "sponsorship":75,
         "label":{
-          "font-size": "10px",
+          "font-size": "8px",
           "color": "#000"
         }
    },
@@ -150,7 +151,8 @@
         "addLabel": true,
         "sponsorship":75,
         "label":{
-          "font-size": "10px",
+          "font-size": "15px",
+          "font-weight": "bold",
           "color": "#000"
         }
    },
@@ -349,6 +351,90 @@
     		"rotation":0,
     		"class":"major-street"
     	}
+    ],
+    "secondCheck":[
+      "7735",
+      "7589",
+      "54581",
+      "7620",
+      "51725",
+      "53454",
+      "51447",
+      "43127",
+      "18219",
+      "53906",
+      "7737",
+      "23069",
+      "18217",
+      "43698",
+      "7555",
+      "7574",
+      "22845",
+      "43371",
+      "54325",
+      "7690",
+      "51488",
+      "50686",
+      "7669",
+      "53719",
+      "17951",
+      "28731",
+      "38282",
+      "43061",
+      "7693",
+      "54107",
+      "28734",
+      "40000"
+    ],
+    "hideLabels":[
+      "7762",
+      "7738",
+      "7661",
+      "53275",
+      "42877",
+      "16910",
+      "7671",
+      "29278",
+      "52548",
+      "53725",
+      "7655",
+      "52556",
+      "7698",
+      "7554",
+      "54123",
+      "45701",
+      "49565",
+      "7767",
+      "51452",
+      "7712",
+      "53905",
+      "54121",
+      "7631",
+      "23079",
+      "23080",
+      "31862",
+      "7619",
+      "44688",
+      "7602",
+      "7741",
+      "54297",
+      "39957",
+      "34599",
+      "42586",
+      "51372",
+      "7628",
+      "7749",
+      "52535",
+      "54140",
+      "7650",
+      "7703",
+      "7771",
+      "51727",
+      "ser_wash_1",
+      "ser_wash_2",
+      "ser_wash_3",
+      "ser_wash_4"
     ]
+
   }
 }
