[Optimization, N/A] Updating package.json with repository information.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.15",
   "description": "Westfield Wayfinding Protytype",
   "main": "app/server/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/westfield/wayfinding_kiosk.git"
+  }
   "scripts": {
     "start": "node app/server/index.js",
     "postinstall": "gulp build"
