[Bug Fix, N/A] Holding off on NewRelic npm

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "stringify": "latest",
     "gulp-livereload": "latest",
     "jshint-stylish": "latest",
-    "gulp-watch": "latest",
-    "newrelic": "latest"
+    "gulp-watch": "latest"
   },
   "engines": {
     "node": "0.10.x"
