[Optimization, OPS-18233] Add NewRelic APM monitoring

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "stringify": "latest",
     "gulp-livereload": "latest",
     "jshint-stylish": "latest",
-    "gulp-watch": "latest"
+    "gulp-watch": "latest",
+    "newrelic": "latest"
   },
   "engines": {
     "node": "0.10.x"
