--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "gulp-livereload": "latest",
     "jshint-stylish": "latest",
     "gulp-watch": "latest",
+    "protractor": "latest",
+    "gulp-protractor": "latest",
     "newrelic": "latest",
     "forecast.io": "0.0.9",
     "util": "^0.10.3"
