Unit and E2E testing implementation
- Add Karma unit testing,
- Re-scope Protractor as E2E
- Trivial tests for both
- Updated Readme
- Ensure jshint is happy with test code

--- a/.jshintrc
+++ b/.jshintrc
@@ -88,6 +88,7 @@
         "module": true,
         "JMap": true,
         "require": true,
+        "inject": true,
         "browser": true
     }
 }
