--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
     "gulp-livereload": "latest",
     "jshint-stylish": "latest",
     "gulp-watch": "latest",
-    "protractor": "latest",
-    "gulp-protractor": "latest",
     "newrelic": "latest",
     "forecast.io": "0.0.9",
     "util": "^0.10.3"
@@ -42,5 +40,13 @@
   "engines": {
     "node": "0.10.x"
   },
-  "author": "Dan Sim"
+  "author": "Dan Sim",
+  "devDependencies": {
+    "angular-mocks": "^1.3.7",
+    "jasmine-core": "^2.1.3",
+    "protractor": "latest",
+    "karma": "latest",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.2"
+  }
 }
