--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node app/server.js",
     "postinstall": "gulp build",
-    "dev": "gulp start"
+    "test": "gulp test"
   },
   "dependencies": {
     "express": "~3.4.x",
@@ -44,9 +44,9 @@
   "devDependencies": {
     "angular-mocks": "^1.3.7",
     "jasmine-core": "^2.1.3",
-    "protractor": "latest",
     "karma": "latest",
     "karma-chrome-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.2"
+    "karma-jasmine": "^0.3.2",
+    "protractor": "latest"
   }
 }
