--- a/package.json
+++ b/package.json
@@ -13,28 +13,29 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "express": "~3.4.x",
-    "gulp": "latest",
-    "browserify": "latest",
     "brfs": "latest",
-    "gulp-browserify": "latest",
-    "gulp-json-editor": "latest",
-    "gulp-sass": "latest",
-    "gulp-nodemon": "latest",
-    "gulp-ruby-sass": "latest",
-    "gulp-zip": "latest",
-    "gulp-concat": "latest",
-    "gulp-ngmin": "latest",
-    "gulp-plumber": "latest",
-    "gulp-clean": "latest",
-    "gulp-jshint": "latest",
-    "gulp-notify": "latest",
-    "stringify": "latest",
-    "gulp-livereload": "latest",
-    "jshint-stylish": "latest",
-    "gulp-watch": "latest",
-    "newrelic": "latest",
+    "browserify": "latest",
+    "cors": "^2.5.2",
+    "express": "~3.4.x",
     "forecast.io": "0.0.9",
+    "gulp": "latest",
+    "gulp-browserify": "latest",
+    "gulp-clean": "latest",
+    "gulp-concat": "latest",
+    "gulp-jshint": "latest",
+    "gulp-json-editor": "latest",
+    "gulp-livereload": "latest",
+    "gulp-ngmin": "latest",
+    "gulp-nodemon": "latest",
+    "gulp-notify": "latest",
+    "gulp-plumber": "latest",
+    "gulp-ruby-sass": "latest",
+    "gulp-sass": "latest",
+    "gulp-watch": "latest",
+    "gulp-zip": "latest",
+    "jshint-stylish": "latest",
+    "newrelic": "latest",
+    "stringify": "latest",
     "util": "^0.10.3"
   },
   "engines": {
@@ -44,6 +45,8 @@
   "devDependencies": {
     "angular-mocks": "^1.3.7",
     "getmac": "^1.0.6",
+    "gulp-develop-server": "^0.2.5",
+    "gulp-shell": "^0.2.11",
     "jasmine-core": "^2.1.3",
     "karma": "latest",
     "karma-chrome-launcher": "^0.1.7",
