--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "wayfinding_prototype",
-  "version": "0.0.15",
-  "description": "Westfield Wayfinding Protytype",
+  "name": "super-fantastic-edm-podcasts",
+  "version": "0.0.1",
+  "description": "EDM Podcasts",
   "main": "app/server.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/westfield/wayfinding_kiosk.git"
+    "url": "https://github.com/zakfisher/edm-podcasts.git"
   },
   "scripts": {
     "start": "node app/server.js",
@@ -41,7 +41,7 @@
   "engines": {
     "node": "0.10.x"
   },
-  "author": "Dan Sim",
+  "author": "ZFi, Super Fantastic",
   "devDependencies": {
     "angular-mocks": "^1.3.7",
     "getmac": "^1.0.6",
